--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
-    "prettier": "^3.3.3"
+    "prettier": "^3.3.3",
+    "typescript": "^5.8.2"
   }
 }
